# rust-pseudoaligner

./: Cargo.toml  README.md  deny.toml  res_6_30_4_0.txt  res_8_30_4_0.txt  res_8_40_4_0.txt  res_8_80_4_0.txt
.github/: dependabot.yml
.github/workflows/: approve_dependabot.yml  test.yml
rust-debruijn/src/: compression.rs  filter.rs  graph.rs
src/: bam.rs  build_index.rs  config.rs  docks.rs  em.rs  equiv_classes.rs  hla.rs  lib.rs  locus.rs  main.rs  mappability.rs  pseudoaligner.rs  scatter.rs  utils.rs  work_queue.rs
test/: README  gencode_small.fa  small.fq
