[package]
name = "debruijn_mapping"
version = "0.6.0"
authors = ["Avi Srivastava <avi.sri02@gmail.com>", "Patrick Marks <patrick@10xgenomics.com>", "Joey Arthur <joey.arthur@10xgenomics.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/10XGenomics/rust-pseudoaligner"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
bio = ">=0.35"
crossbeam-utils = ">=0.7"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn" }
docopt = "1.0"
anyhow = "1"
flate2 = "1.0"
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
rayon = "1.8"
serde = "1.0"
boomphf = { version = "^0.6", features = ["serde"] }
dashmap = "5"
bincode = "1.2"
pretty_env_logger = "0.5"

[dev-dependencies.proptest]
version = "1"
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]

[profile.release]
debug = 1

[features]
default = []
slow_tests = []